Remove obsolete import statements and dead code